First try 1.21.1 neoforge
From the ground up, project using Neoforge and mapped forge-neoforge methods. Fixed some IE classes names